# conexipro

./: .env  .env.example  Cargo.toml  Makefile.toml  Readme.md  diesel.toml  ecosystem.config.js  swagger.json
fe/: package.json  tsconfig.json  vite.config.ts
migrations/2024-06-13-110344_create_users/: down.sql  up.sql
migrations/2024-06-13-111808_create_user_info/: down.sql  up.sql
src/: lib.rs  main.rs  routes.rs  schema.rs  services.rs  swagger.rs
src/controllers/: auth_controller.rs  general_controller.rs  home_controller.rs  mod.rs  user_controller.rs
src/errors/: error_handler.rs  handler.rs  mod.rs  validation_error.rs
src/middleware/: all.rs  auth_middleware.rs  cors.rs  cors_middleware.rs  mod.rs  rate_limit.rs  rate_limit_middleware.rs
src/models/: mod.rs  user.rs  user_info.rs
src/repository/: mod.rs  user_info_repo.rs  user_repo.rs
src/requests/: auth_request.rs  change_avatar_request.rs  change_avatar_rquest.rs  change_username_request.rs  extra_requests.rs  info_request.rs  mod.rs  user_detail_path.rs  user_info_update_request.rs  user_login_request.rs  user_register_request.rs  user_update_request.rs
src/response/: change_avatar_response.rs  change_username_response.rs  mod.rs  user_detail.rs  user_detail_response.rs  user_login_response.rs
src/services/: mod.rs  storage_service.rs  user_service.rs
src/utils/: app.rs  auth.rs  db.rs  file_validator.rs  firebase.rs  jwt.rs  mod.rs  serializer.rs  utils.rs
web/: .env.example  eslint.config.js  index.html  package.json  tailwind.config.js  vite.config.ts
web/src/: App.vue  main.ts  style.css
(+14 files in other folders)
