[package]
name = "conexipro"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = "0.99.18"
actix-http = "3.7.0"
actix-web = "4"
actix-web-lab = "0.20.2"
log = "0.4"
env_logger = "0.11.3"
dotenv = "0.15.0"
diesel = { version = "2.2.0", features = ["mysql"] }
futures-util = "0.3.30"
chrono = { version = "0.4.23", features = ["serde"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
validator = "0.18.1"
validator_derive = "0.18.1"
actix-cors = "0.7.0"
actix-governor = "0.5.0"
