[package]
name = "conexipro"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
derive_more = "0.99.18"
actix-http = "3.7.0"
actix-web = "4"
actix-web-lab = "0.20.2"
log = "0.4"
env_logger = "0.11.3"
dotenv = "0.15.0"
diesel = { version = "2.1", features = ["chrono", "mysql"] }
diesel-async = { version = "0.4.1", features = ["mysql", "bb8"] }
bb8 = "0.8.5"
diesel_migrations = "2.1.0"
futures-util = "0.3.30"
chrono = { version = "0.4.23", features = ["serde"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
validator = "0.18.1"
validator_derive = "0.18.1"
actix-cors = "0.7.0"
actix-governor = "0.5.0"
jsonwebtoken = "9"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.38.0"
tokio = { version = "1", features = ["full"] }
actix-multipart = "0.6.2"
uuid = {version = "1.8.0", features = ["v4"]}
mime_guess = "2.0.4"
